hphp/hack/test/typecheck/empty_shape_field_name.php.exp
File "empty_shape_field_name.php", line 2, characters 25-26:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
