hphp/hack/test/typecheck/empty_shape_field_name.php
<?hh // partial
function test() : shape('' => int) {
  $x = shape('' => 6);
  return $x;
}
